# qt_study

./: .gitignore
1_hello_qt/: CMakeLists.txt  main.cpp  student.cpp  student.h  teacher.h  widget.cpp  widget.h
2_hello_widgets/hello_widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
3_hello_cmake/: CMakeLists.txt
3_hello_cmake/1_cmake_basic/: CMakeLists.txt
3_hello_cmake/1_cmake_basic/src/: div.cpp  main.cpp
3_hello_cmake/2_make_lib_dll/: CMakeLists.txt
3_hello_cmake/3_load_lib_dll/: CMakeLists.txt
3_hello_cmake/3_load_lib_dll/include/: head.h
3_hello_cmake/3_load_lib_dll/src/: main.cpp
3_hello_cmake/4_other/: CMakeLists.txt  main.cpp
3_hello_cmake/5_subdirectory/: CMakeLists.txt
3_hello_cmake/5_subdirectory/calc/: CMakeLists.txt  div.cpp
3_hello_cmake/5_subdirectory/include/: calc.h  sort.h
3_hello_cmake/5_subdirectory/sort/: CMakeLists.txt  insert.cpp  select.cpp
3_hello_cmake/5_subdirectory/test1/: CMakeLists.txt  calc.cpp
3_hello_cmake/5_subdirectory/test2/: CMakeLists.txt  sort.cpp
